third-party/rust/crates/better_default/1.0.5/tests/compile_fail/enum/variant_not_selected.rs
#![allow(dead_code)]

use better_default::Default;

#[derive(Default)]
enum Enum2 {
    Variant {
        first: u32,
        second: String,
    },

    Variant2,

    Variant3,
}

fn main() {}