third-party/rust/crates/better_default/1.0.5/tests/compile_fail/enum/variant_not_selected.stderr
error: the default variant has not been set.
 --> tests/compile_fail/enum/variant_not_selected.rs:5:10
  |
5 | #[derive(Default)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
